# telegram-bot-client

./: .flake8  Dockerfile  pyproject.toml
bot/: CallBackModels.py  OtherCode.py  login_dicts.py  main.py  text_file.py
bot/Handlers/: Login_handle.py  MAinHandles.py  OtherHandlers.py  Posts_handlers.py  admin_handles.py  registration_handle.py
bot/Request_result/: reform_responces.py  requests_file.py
bot/States/: StatesModel.py
